fixed text overflow on groups, redirect when signing up

--- a/frontend/src/components/EventsGroups/Groups.css
+++ b/frontend/src/components/EventsGroups/Groups.css
@@ -37,7 +37,8 @@
 .group-text-about{
     font-size: 14px;
     font-weight: 300;
-    color: #757575
+    color: #757575;
+    text-overflow: ellipsis;
 }
 .member-count-privacy-status{
     display: flex;
